# factorio-discord-integration

./: .editorconfig  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
ci/: cargo-out-dir
src/: main.rs
