[package]
name = "factorio-discord-integration"
version = "0.0.1"
authors = ["dopin <dopinninja@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
reqwest = { version = "0.10.6", features = ["json"] }
serde_json = "1.0.56"
tokio = { version = "0.2", features = ["macros"] }
notify = "4.0.15"
